feat: session expiry, guest/admin guards and the rest of the route tree (phase 3)
- Frontend reads the JWT expiry: an expired session counts as signed out,
  authGuard clears it and redirects to sign-in with returnUrl, and
  sign-in returns the user to that page
- guestGuard keeps signed-in users off /auth/login and /auth/register;
  registration gets its own /auth/register route
- New pages: /profile (header "My Profile"), /forbidden for non-admins on
  admin pages, and a real 404 page for unknown addresses
- Admin audit log: filter by workspace (default: all), workspace names
  instead of ids, and TASK_CREATED / TASK_DELETED / TASK_AUTO_UNASSIGNED
  filters
- Surefire passes -Dnet.bytebuddy.experimental=true so Mockito can mock
  classes on JDKs newer than 21
- Remove the unused EmptyComponent route stub; README rewritten for the
  Windows setup and access model; REST API doc covers the new endpoints